{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 333,
  "lineage": "109a7b44-6f5c-2e6a-62b2-fbc3afc522aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jinseong_eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8ebf0f1f20bc700",
            "domain": "vpc",
            "id": "eipalloc-0f8ebf0f1f20bc700",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-147-55.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.147.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jinseong_eip_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003908f2f5ebef138",
            "associate_with_private_ip": "10.0.0.11",
            "association_id": "eipassoc-020facec8431ded3f",
            "domain": "vpc",
            "id": "eipalloc-003908f2f5ebef138",
            "instance": "i-0e4ed9758b530ce01",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0d71a40e60675efcd",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-52-79-61-75.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.61.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jinseong_weba",
            "aws_internet_gateway.jinseong_igw",
            "aws_key_pair.jinseong_key",
            "aws_security_group.jinseong_sg",
            "aws_subnet.jinseong_subnet_01",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jinseong_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8dfc09b22389ad",
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:instance/i-0e4ed9758b530ce01",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4ed9758b530ce01",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jinseong-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d71a40e60675efcd",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e135629e72660b10",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06730b8d0bfe66fc3",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02814b6975b1778d7"
            ]
          },
          "dependencies": [
            "aws_key_pair.jinseong_key",
            "aws_security_group.jinseong_sg",
            "aws_subnet.jinseong_subnet_01",
            "aws_vpc.JS-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jinseong_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:internet-gateway/igw-09f654956e32de080",
            "id": "igw-09f654956e32de080",
            "owner_id": "328720699233",
            "tags": {
              "Name": "jinseong_igw"
            },
            "tags_all": {
              "Name": "jinseong_igw"
            },
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "dependencies": [
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "jinseong_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:loadbalancer/app/jinseong-alb/1d6b8e72eff9699d",
            "arn_suffix": "app/jinseong-alb/1d6b8e72eff9699d",
            "dns_name": "jinseong-alb-452646527.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:loadbalancer/app/jinseong-alb/1d6b8e72eff9699d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jinseong-alb",
            "security_groups": [
              "sg-02814b6975b1778d7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-045c57ee3a22e1c8a"
              },
              {
                "subnet_id": "subnet-06730b8d0bfe66fc3"
              }
            ],
            "subnets": [
              "subnet-045c57ee3a22e1c8a",
              "subnet-06730b8d0bfe66fc3"
            ],
            "tags": {
              "Name": "jinseong-alb"
            },
            "tags_all": {
              "Name": "jinseong-alb"
            },
            "vpc_id": "vpc-0e6cd23e937b965b6",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.jinseong_sg",
            "aws_subnet.jinseong_subnet_01",
            "aws_subnet.jinseong_subnet_03",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "jinseong_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:listener/app/jinseong-alb/1d6b8e72eff9699d/7b438fd10736edb2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/jinseong-albtg/7de1bfce81025be4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:listener/app/jinseong-alb/1d6b8e72eff9699d/7b438fd10736edb2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:loadbalancer/app/jinseong-alb/1d6b8e72eff9699d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.jinseong_alb",
            "aws_lb_target_group.jinseong_albtg",
            "aws_security_group.jinseong_sg",
            "aws_subnet.jinseong_subnet_01",
            "aws_subnet.jinseong_subnet_03",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jinseong_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/jinseong-albtg/7de1bfce81025be4",
            "arn_suffix": "targetgroup/jinseong-albtg/7de1bfce81025be4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/jinseong-albtg/7de1bfce81025be4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "jinseong-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "dependencies": [
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jinseong_tgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/jinseong-albtg/7de1bfce81025be4-20211112080636002300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:328720699233:targetgroup/jinseong-albtg/7de1bfce81025be4",
            "target_id": "i-0e4ed9758b530ce01"
          },
          "dependencies": [
            "aws_instance.jinseong_weba",
            "aws_key_pair.jinseong_key",
            "aws_lb_target_group.jinseong_albtg",
            "aws_security_group.jinseong_sg",
            "aws_subnet.jinseong_subnet_01",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jinseong_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8ebf0f1f20bc700",
            "connectivity_type": "public",
            "id": "nat-0abf3f168b3ef34d4",
            "network_interface_id": "eni-0bed7d0358f221863",
            "private_ip": "10.0.0.146",
            "public_ip": "15.165.147.55",
            "subnet_id": "subnet-06730b8d0bfe66fc3",
            "tags": {
              "Name": "jinseong-nat"
            },
            "tags_all": {
              "Name": "jinseong-nat"
            }
          },
          "dependencies": [
            "aws_eip.jinseong_eip_nat",
            "aws_internet_gateway.jinseong_igw",
            "aws_subnet.jinseong_subnet_01",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jinseong_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:route-table/rtb-0e987be7fc8e4d8c6",
            "id": "rtb-0e987be7fc8e4d8c6",
            "owner_id": "328720699233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f654956e32de080",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jinseong_rt"
            },
            "tags_all": {
              "Name": "jinseong_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jinseong_igw",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jinseong_rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:route-table/rtb-0d8d98ee23a4c3f8e",
            "id": "rtb-0d8d98ee23a4c3f8e",
            "owner_id": "328720699233",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0abf3f168b3ef34d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jinseong-rt-nat"
            },
            "tags_all": {
              "Name": "jinseong-rt-nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.jinseong_eip_nat",
            "aws_internet_gateway.jinseong_igw",
            "aws_nat_gateway.jinseong_nat",
            "aws_subnet.jinseong_subnet_01",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jinseong_natrtass_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0777a939b02a38515",
            "route_table_id": "rtb-0d8d98ee23a4c3f8e",
            "subnet_id": "subnet-0c69868d90c728ed2"
          },
          "dependencies": [
            "aws_eip.jinseong_eip_nat",
            "aws_internet_gateway.jinseong_igw",
            "aws_nat_gateway.jinseong_nat",
            "aws_route_table.jinseong_rt_nat",
            "aws_subnet.jinseong_subnet_01",
            "aws_subnet.jinseong_subnet_02",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jinseong_natrtass_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e435c353dfdb0328",
            "route_table_id": "rtb-0d8d98ee23a4c3f8e",
            "subnet_id": "subnet-006dfba76f25d0db6"
          },
          "dependencies": [
            "aws_eip.jinseong_eip_nat",
            "aws_internet_gateway.jinseong_igw",
            "aws_nat_gateway.jinseong_nat",
            "aws_route_table.jinseong_rt_nat",
            "aws_subnet.jinseong_subnet_01",
            "aws_subnet.jinseong_subnet_04",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jinseong_rtass_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0717b4adc4bbc2957",
            "route_table_id": "rtb-0e987be7fc8e4d8c6",
            "subnet_id": "subnet-06730b8d0bfe66fc3"
          },
          "dependencies": [
            "aws_internet_gateway.jinseong_igw",
            "aws_route_table.jinseong_rt",
            "aws_subnet.jinseong_subnet_01",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jinseong_rtass_public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6474444a99e1aa7",
            "route_table_id": "rtb-0e987be7fc8e4d8c6",
            "subnet_id": "subnet-045c57ee3a22e1c8a"
          },
          "dependencies": [
            "aws_internet_gateway.jinseong_igw",
            "aws_route_table.jinseong_rt",
            "aws_subnet.jinseong_subnet_03",
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jinseong_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:security-group/sg-02814b6975b1778d7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "AllowAll",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02814b6975b1778d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AllowAll",
            "name_prefix": "",
            "owner_id": "328720699233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jinseong-sg"
            },
            "tags_all": {
              "Name": "jinseong-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.JS-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jinseong_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-06730b8d0bfe66fc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-06730b8d0bfe66fc3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "jinseong_subnet_01"
            },
            "tags_all": {
              "Name": "jinseong_subnet_01"
            },
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "dependencies": [
            "aws_vpc.JS-VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jinseong_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-0c69868d90c728ed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c69868d90c728ed2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "jinseong_subnet_02"
            },
            "tags_all": {
              "Name": "jinseong_subnet_02"
            },
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "dependencies": [
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jinseong_subnet_03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-045c57ee3a22e1c8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-045c57ee3a22e1c8a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "jinseong_subnet_03"
            },
            "tags_all": {
              "Name": "jinseong_subnet_03"
            },
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "dependencies": [
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jinseong_subnet_04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:subnet/subnet-006dfba76f25d0db6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-006dfba76f25d0db6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "328720699233",
            "tags": {
              "Name": "jinseong_subnet_04"
            },
            "tags_all": {
              "Name": "jinseong_subnet_04"
            },
            "vpc_id": "vpc-0e6cd23e937b965b6"
          },
          "dependencies": [
            "aws_vpc.JS-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JS-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:328720699233:vpc/vpc-0e6cd23e937b965b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ebeaf04a9cc35f33",
            "default_route_table_id": "rtb-068564d1adcf12121",
            "default_security_group_id": "sg-025d47dedb7d703da",
            "dhcp_options_id": "dopt-dd5f11b6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e6cd23e937b965b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-068564d1adcf12121",
            "owner_id": "328720699233",
            "tags": {
              "Name": "JS-VPC"
            },
            "tags_all": {
              "Name": "JS-VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}